# qbodbc

./: .gitignore  LICENSE  README.md  optimizer.txt  pickle_customer  requirements.txt  setup.cfg  setup.py
examples/: connect.py  connection_testing.py  create_bill.py  create_customer.py  pickle_customer.py  refactor_test_insert.py  test_insert.py
examples/docker/: Dockerfile  requirements.txt  script.py
examples/qbclient/: main.py
examples/qbserver/: input.py  main.py
qbodbc/: __init__.py  bill.py  client.py  customer.py  customers.py  exceptions.py  utils.py
qbodbc/objects/: __init__.py  account.py  address.py  base_object.py  baseobject.py  bill.py  customer.py  journal.py
tests/: test_base.py  test_connection.py  test_demotest.py  test_insert.py
tests/bill/: test_bill.py
tests/client/: test_connection.py
tests/objects/: test_account.py  test_bill.py  test_customer  test_customer.py  test_dict.py  test_journal.py
