[metadata]
name = qbodbc
version = 0.0.2
author = Bill Ash 
author_email = bill@overco.net
description = SQL Wrapper for QuickBooks Desktop. 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bill-ash/qbodbc
project_urls =
    Bug Tracker = https://github.com/bill-ash/qbodbc/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires = 
    pandas>=1.3.4
    pyodbc>=4.0.32    
[options.extras_require]
tests =
    pytest
  